# openstack_template

./: .coveragerc  .gitignore  .testr.conf  README.rst  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  tox.ini
etc/openapp/: README-openapp.conf.txt  api-paste.ini  logging_sample.conf  rootwrap.conf
etc/openapp/rootwrap.d/: sample.filters
openapp/: __init__.py  baserpc.py  config.py  context.py  debugger.py  exception.py  i18n.py  paths.py  policy.py  rpc.py  service.py  utils.py  version.py  wsgi.py
openapp/api/: auth.py
openapp/api/rest/: __init__.py  template.py
openapp/api/template/: rest.py
openapp/cmd/: __init__.py  api.py
openapp/network/: __init__.py
openapp/objects/: __init__.py  base.py  fields.py
openapp/openstack/common/: _i18n.py  cliutils.py  eventlet_backdoor.py  imageutils.py  loopingcall.py  periodic_task.py  policy.py  service.py  sslutils.py  threadgroup.py  versionutils.py
openapp/openstack/common/config/: generator.py
openapp/openstack/common/middleware/: request_id.py
openapp/openstack/common/report/: guru_meditation_report.py  report.py
openapp/openstack/common/report/generators/: conf.py  process.py  threading.py  version.py
openapp/openstack/common/report/models/: conf.py  process.py  threading.py  (+2 more)
openapp/servicegroup/: __init__.py  api.py
openapp/servicegroup/drivers/: db.py  mc.py  zk.py
openapp/tests/unit/: test_template.py
tools/: enable-pre-commit-hook.sh  regression_tester.py
tools/config/: README  analyze_opts.py  check_uptodate.sh  generate_sample.sh
tools/db/: schema_diff.py
(+4 files in other folders)
