[metadata]
name = openapp
version = 2015.1
summary = OpenStack based openapplication template
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    openapp

[entry_points]
console_scripts =
    openapp = openapp.cmd.api:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = openapp/locale
domain = openapp

[update_catalog]
domain = openapp
output_dir = openapp/locale
input_file = openapp/locale/openapp.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mopenapping_file = babel.cfg
output_file = openapp/locale/openapp.pot

[wheel]
universal = 1

[pbr]
autodoc_index_modules = 0
warnerrors = true
